<?xml version="1.0"?>
<package>
  <name>tams_ur5</name>
  <version>0.0.0</version>
  <description>Metapackage for TAMS' UR5 setup</description>
  
  <maintainer email="goerner@informatik.uni-hamburg.de">Michael Goerner</maintainer>
  <author email="5jonetzk@informatik.uni-hamburg.de">Yannick Jonetzko</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>tams_ur5_bringup</run_depend>
  <run_depend>tams_ur5_description</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
